# This file is part of ubpf. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ubpf/master/COPYRIGHT. No part of ubpf, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of ubpf. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/ubpf/master/COPYRIGHT.


[package]
name = "ubpf-sys"
description = "Rust FFI bindings for iovisor's fork of ubpf"
keywords = ["ubpf", "BPF", "packet", "networking"]
categories = ["network-programming", "external-ffi-bindings"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/ubpf/blob/master/README.md"
homepage = "https://github.com/lemonrock/ubpf"
repository = "https://github.com/lemonrock/ubpf.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile.conf.d/**/*"]
build = "src/build.rs"
readme = "README.md"
publish = true
version = "0.1.0"

[dependencies]
libc = "^0.2"
